2003-09-26  Rainer Orth  <ro@TechFak.Uni-Bielefeld.DE>

	Consolidate alloca support.

	* amd/amq_svc.c: Move alloca support ...
	* include/am_defs.h: ... here.
	* amd/conf_parse.y: Remove alloca support.
	* fsinfo/fsi_gram.y: Likewise.

2003-09-25  Rainer Orth  <ro@TechFak.Uni-Bielefeld.DE>

	Handle Solaris 10.
	* m4/macros/check_nfs_prot_headers.m4
	(AMU_CHECK_NFS_PROT_HEADERS): Don't use wildcards for
	sunos5.[0-3], solaris 2.[0-3], there were no micro releases.
	Explicitly match sunos5*, solaris2* for Solaris 8 and beyond.
	
	* m4/macros/os_cflags.m4 (AMU_OS_CFLAGS): Dont use wildcards for
	solaris2.[0-5], sunos5.[0-5], but explicitly handle Solaris 2.5
	micro releases to cope with Solaris 2.5.1.
	Explicitly match solaris2*, sunos5*.
	
2003-09-25  Rainer Orth  <ro@TechFak.Uni-Bielefeld.DE>

	* amd/amq_svc.c: Provide alloca prerequisites.

	* conf/transp/transp_tli.c (register_autofs_service): Fix typo.

2003-09-23  Ion Badulescu  <ion@opteron.tower-research.com>

	* minor new port: x86_64-unknown-linux-rh2.9.5AS. (Red Hat
	Enterprise Linux 3.0 beta running on a 64-bit AMD64 platform)

2003-09-22  Ion Badulescu  <ionut@buggy.badula.org>

	* conf/autofs/autofs_solaris_v1.c (autofs_mount_fs): compile fix

2003-09-19  Ion Badulescu  <ionut@moisil.badula.org>

	* amd/amfs_nfsl.c (amfs_nfsl_match): checking opt_fs is not always
	enough, we should lstat() the sublink if it's defined.
	(amfs_nfsl_ffserver): ditto
	(ALL): Removed some obsolete comments. The nfsl code is now little
	more than a very straight-forward switch between link and nfs.

	* amd/amfs_link.c (amfs_link_match): more up-to-date explanation
	for the prepend-the-dot hack for type link; also, the sublink is
	already normalized and absolute, so take advantage of that

	* amd/amfs_generic.c (amfs_lookup_one_mntfs): the sublink is
	already normalized and absolute, so take advantage of that

	* amd/am_ops.c (ops_match): normalize the sublink here, early into
	the matching process
