@@ -115,3 +115,4 @@ A.i386-unknown-freebsd5.1
 A.i686-apple-darwin6.6
 A.i386-unknown-freebsd4.8
 A.x86_64-unknown-linux-rh2.9.5AS
+A.mipsel-unknown-linux-rhPS2
