@@ -1,7 +1,8 @@
 *** Notes specific to am-utils version 6.1b5pre
 
 - minor new ports:
-        i386-unknown-freebsd4.8
+	i386-unknown-freebsd4.8
+	mipsel-unknown-linux-rhPS2 (Linux on Sony PlayStation 2)
 
 *** Notes specific to am-utils version 6.1b4
 
